2011-05-11  John Sullivan  <sullivan@apple.com>

        Reviewed by Darin Adler.

        <https://bugs.webkit.org/show_bug.cgi?id=60631>
        <rdar://problem/9420520>
        
        WebKit2 doesn't clear the pendingAPIRequestURL on in-page anchor navigation [60631]

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::didSameDocumentNavigationForFrame):
        Call clearPendingAPIRequestURL().

2011-05-11  Adam Roben  <aroben@apple.com>

        Turn on strict PassOwnPtr on Windows

        Fixes <http://webkit.org/b/60632> Windows should build with strict PassOwnPtr enabled

        Reviewed by Adam Barth.

        * WebProcess/FullScreen/win/WebFullScreenManagerWin.cpp:
        (WebKit::WebFullScreenManagerWin::setRootFullScreenLayer): Use nullptr instead of 0.

2011-05-11  Jessie Berlin  <jberlin@apple.com>

        Reviewed by Darin Adler.

        [WebKit2] exceededDatabaseQuota function on WKPageUIClient needs to provide information
        about the usage for both the origin overall and the database in question.
        https://bugs.webkit.org/show_bug.cgi?id=60573

        Add the currentOriginUsage parameter.

        * Platform/CoreIPC/HandleMessage.h:
        (CoreIPC::callMemberFunction):
        * UIProcess/API/C/WKPage.h:
        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::exceededDatabaseQuota):
        * UIProcess/WebPageProxy.h:
        * UIProcess/WebPageProxy.messages.in:
        * UIProcess/WebUIClient.cpp:
        (WebKit::WebUIClient::exceededDatabaseQuota):
        * UIProcess/WebUIClient.h:
        * WebProcess/WebCoreSupport/WebChromeClient.cpp:
        (WebKit::WebChromeClient::exceededDatabaseQuota):

2011-05-10  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoffrey Garen.

        Assertion failure in JSC::Structure::typeInfo when reloading weather.com video page
        https://bugs.webkit.org/show_bug.cgi?id=60580
